--- a/war/research.html
+++ b/war/research.html
@@ -97,7 +97,7 @@
 				<br><br>
 				<a class="links" href="randomImages.html">randomImages</a>:
 				<br>
-				This is an webGL implementation of Karl Sims' early work, but needs more polish. 
+				This is a webGL implementation of Karl Sims' early work, but needs more polish. 
 				It generates random tree representations of animations and burns your GPU. 
 				Refresh the page to see something new.
 				<br><br>
