--- a/war/teaching.html
+++ b/war/teaching.html
@@ -27,7 +27,7 @@
 				Advisor: <a class="links" href="http://www-personal.umich.edu/~pyp/">Panos Y. Papalambros</a>
 			</div>	
 			<div id="footnote">
-				Last update of this page: Jul 20 2013.
+				Last update of this page: Aug 03 2013.
 			</div>	
 		</div>
 		
@@ -50,8 +50,9 @@
 			</div>
 			<div id="statement">
 			<br>
-			<b>Design Optimization (ME555)</b><br><br>
-			
+			<b>Lecturer, Design Optimization (ME555, Winter 2013)</b><br><br>
+			I covered theoretical foundations of nonlinear programming and numerical methods, including both gradient-based and derivative-free algorithms.
+			 I also provided tutorials on modeling and optimization using Matlab, AMESim and Optimus.<br>
 			*Project archive can be found from <a class="links" href="http://optimaldesign.org/">
 			 the official course website</a>.<br><br>
 			<b>My lecture notes (updated Winter 2013)</b><br>
@@ -62,6 +63,20 @@
 					<li><a class="links" href="resource/teaching/metamodeling.pdf">Metamodeling (regression)</a></li>
 					<li><a class="links" href="resource/teaching/heuristics.pdf">Derivative-free optimization</a></li>
 				</ul>
+			
+			<br><br>
+			<b>Guest lecturer, Analytical Product Design (ME455, 2009-2012)</b><br>
+			I gave lectures on design of experiments and derivative-free optimization, 
+			consulted course projects, and helped developing course exams.
+			
+			<br><br>
+			<b>Teaching assistant, Design Optimization (ME555, 2009, 2011)</b><br>
+			I gave lectures on design of experiments and derivative-free optimization, 
+			consulted course projects, and helped developing course exams.
+			
+			<br><br>
+			<b>Teaching assistant, Design and Manufacturing (ME350, 2010)</b><br>
+			I guided student teams in the design competition and held discussion sessions and ADAMS labs.	
 			</div>
 		</div>
 	</body>
