[webGL] render updated, but needs more change to original code

--- a/war/ICEDmturk.html
+++ b/war/ICEDmturk.html
@@ -4,10 +4,10 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>maxDesign</title>
-	<link href="css/ICEDmturk.css" rel="stylesheet" type="text/css" />
+	<link href="css/ICEDmturk_light.css" rel="stylesheet" type="text/css" />
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
 	<link href="css/spinner.css" rel="stylesheet" type="text/css" />
-	<link href="css/ui-darkness/jquery-ui-1.9.1.custom.css" rel="stylesheet" type="text/css"/>
+<!-- 	<link href="css/ui-darkness/jquery-ui-1.9.1.custom.css" rel="stylesheet" type="text/css"/> -->
 	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>	
 	<script type="text/javascript" src="scripts/jquery-ui-1.9.1.custom.min.js"></script>
 	<script type="text/javascript" src="scripts/three.js"></script>
