--- a/war/forICED.html
+++ b/war/forICED.html
@@ -4,17 +4,21 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<title>maxDesign</title>
-	<link href="css/forICED.css" rel="stylesheet" type="text/css" />
+	<link href="css/forICED_light.css" rel="stylesheet" type="text/css" />
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
 	<link href="css/spinner.css" rel="stylesheet" type="text/css" />
 	<link href="css/ui-darkness/jquery-ui-1.9.1.custom.css" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>	
 	<script type="text/javascript" src="scripts/jquery-ui-1.9.1.custom.min.js"></script>
-	<script type="text/javascript" src="scripts/three.js"></script>
-	<script type="text/javascript" src="scripts/Detector.js"></script>
+	<script type="text/javascript" src="scripts/geometry/three.js"></script>
+	<script type="text/javascript" src="scripts/geometry/NURBScurve.js"></script>
+	<script type="text/javascript" src="scripts/geometry/NURBSSurface.js"></script>
+	<script type="text/javascript" src="scripts/geometry/NURBSUtils.js"></script>
+	<script type="text/javascript" src="scripts/geometry/ColladaLoader.js"></script>
+	<script type="text/javascript" src="scripts/geometry/Detector.js"></script>
 	<script type="text/javascript" src="scripts/spinner.js"></script>
-	<script type="text/javascript" src="scripts/carModel.js"></script>
-	<script type="text/javascript" src="scripts/model_new.js"></script>
+	<script type="text/javascript" src="scripts/carModel_old.js"></script>
+	<script type="text/javascript" src="scripts/model_old.js"></script>
 	<script type="text/javascript" src="scripts/matchbox.js"></script>
 	<script type="text/javascript" src="scripts/bezierpatch.js"></script>
 	<script type="text/javascript" src="scripts/utility2.js"></script>
