--- a/war/idetc2013a.html
+++ b/war/idetc2013a.html
@@ -31,12 +31,12 @@
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
 	
 	<!-- 	Include Mathjax -->
-<!-- 	<script type="text/javascript" -->
-<!-- 	  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"> -->
-<!-- 	</script> -->
-	<script type="text/javascript" -->
-		src="scripts/mathjax/MathJax.js"
+	<script type="text/javascript"
+	  src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 	</script>
+<!-- 	<script type="text/javascript" -->
+<!--        src="scripts/mathjax/MathJax.js"-->		
+<!-- 	</script> -->
 	<script type="text/x-mathjax-config">
 	  MathJax.Hub.Config({
 		extensions: ["tex2jax.js"],
