--- a/war/index.html
+++ b/war/index.html
@@ -20,12 +20,12 @@
 				<br><br>
 				Ph.D., <a class="links" href="http://me.engin.umich.edu/">Mechanical Engineering</a>  
 				<br>
-				<a class="links", href="http://www.umich.edu/">University of Michigan</a>, 2011
+				<a class="links", href="http://www.umich.edu/">University of Michigan</a>, December 2011
 				<br>
 				Advisor: <a class="links" href="http://www-personal.umich.edu/~pyp/">Panos Y. Papalambros</a>
 			</div>	
 			<div id="footnote">
-				Last update of this page: Oct 22 2013.
+				Last update of this page: November 18 2013.
 			</div>	
 		</div>
 
@@ -51,9 +51,9 @@
 			<div id="me">
 				I am interested in human-computer interactions and machine learning techniques applied to engineering and art design. 
 				My <a class="links" href="http://ode.engin.umich.edu/publications/Dissertations&Theses/RenPhDdissertationIntro.pdf">
-				dissertation</a> work focused on eliciting user preferences efficiently through interactions. 
-				I'm currently working on several engineering and design projects that require developments of tailored 
-				learning algorithms.
+				dissertation</a> work focused on efficient elicitation of user preferences through interactions. 
+				I'm currently working on several engineering and design projects that require developments of learning algorithms 
+				and knowledge extraction from human crowds.
 				<br><br>
 				<div id="cv">
 					<a class="highlight_font" href="resource/yiren_cv2013.pdf">Curriculum Vitae</a> 
@@ -68,7 +68,7 @@
 					<tbody>
 						<tr>
 							<td>
-								<a href=""><img src="images/dpe.png" style="width:90px;border:0px;"></a>
+								<a href=""><img src="images/dpe1.png" style="width:90px;border:0px;"></a>
 							</td>
 							<td>
 								<div class="des">
