--- a/war/interaction.html
+++ b/war/interaction.html
@@ -8,11 +8,13 @@
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
 	<link href="css/spinner.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>	
-	<script type="text/javascript" src="scripts/three.js"></script>
-	<script type="text/javascript" src="scripts/Detector.js"></script>
+	<script type="text/javascript" src="scripts/geometry/three.js"></script>
+	<script type="text/javascript" src="scripts/geometry/Detector.js"></script>
+	<script type="text/javascript" src="scripts/geometry/stats.js"></script>
+	<script type="text/javascript" src="scripts/geometry/ColladaLoader.js"></script>	
+	<script type="text/javascript" src="scripts/carModel_old.js"></script>
+	<script type="text/javascript" src="scripts/model_old.js"></script>
 	<script type="text/javascript" src="scripts/spinner.js"></script>
-	<script type="text/javascript" src="scripts/carModel.js"></script>
-	<script type="text/javascript" src="scripts/model_new.js"></script>
 	<script type="text/javascript" src="scripts/matchbox.js"></script>
 	<script type="text/javascript" src="scripts/bezierpatch.js"></script>
 	<script type="text/javascript" src="scripts/utility1.js"></script>	
