--- a/war/publication.html
+++ b/war/publication.html
@@ -22,12 +22,12 @@
 				<br><br>
 				Ph.D., <a class="links" href="http://me.engin.umich.edu/">Mechanical Engineering</a>  
 				<br>
-				<a class="links", href="http://www.umich.edu/">University of Michigan</a>, 2011
+				<a class="links", href="http://www.umich.edu/">University of Michigan</a>, December 2011
 				<br>
 				Advisor: <a class="links" href="http://www-personal.umich.edu/~pyp/">Panos Y. Papalambros</a>
 			</div>	
 			<div id="footnote">
-				Last update of this page: Oct 22 2013.
+				Last update of this page: November 16 2013.
 			</div>	
 		</div>
 		
@@ -54,6 +54,15 @@
 				<b>Ren, Y.</b> and Papalambros, P. Y., "A Design Preference Elicitation Query as an Optimization Process", 
 				<i>ASME Journal of Mechanical Design</i>, Vol. 133, No. 11, 2011. 
 				(<a class="links" href="resource/RenPapers/jmd2011.pdf" target="_parent">pdf</a>)<br><br>
+				Burnap, A., <b>Ren, Y.</b>, Papalambros, P. Y., Gonzalez, R. and Gerth, R., 
+				"A Study of Crowd Ability and its Inﬂuence on Crowdsourced Evaluation of Design Concepts", 
+				<i>ASME Journal of Mechanical Design</i> (submitted)<br><br>
+				Bayrak, A. E., <b>Ren, Y.</b>, and Papalambros, P. Y., 
+				"Optimal Architecture Design of Dual-Mode Hybrid-electric Powertrain", 
+				<i>IEEE Transactions on Vehicular Technology</i> (submitted).<br><br>
+				<b>Ren, Y.</b>, Scott, C. and Papalambros, P. Y., 
+				"A Scalable Preference Elicitation Algorithm Using Group Generalized Binary Search", 
+				<i>IEEE Transactions on Knowledge and Data Engineering</i> (submitted).<br><br>
 				
 				<b>Peer reviewed conference papers</b><br>
 				<b>Ren, Y.</b>, Scott, C. and Papalambros, P. Y., "A Scalable Preference Elicitation Algorithm 
