--- a/war/hello.html
+++ b/war/hello.html
@@ -6,15 +6,17 @@
 	<title>maxDesign</title>
 	<link href="css/car.css" rel="stylesheet" type="text/css" />
 	<link href="css/font.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>	
-	<script type="text/javascript" src="scripts/three.js"></script>
-	<script type="text/javascript" src="scripts/Detector.js"></script>
-	<script type="text/javascript" src="scripts/stats.js"></script>
-	<script type="text/javascript" src="scripts/carModel.js"></script>
-	<script type="text/javascript" src="scripts/model_new.js"></script>
+	<script type="text/javascript" src="scripts/jquery-latest.min.js"></script>
+	<script type="text/javascript" src="scripts/geometry/three.js"></script>
+	<script type="text/javascript" src="scripts/geometry/Detector.js"></script>
+	<script type="text/javascript" src="scripts/geometry/stats.js"></script>
+	<script type="text/javascript" src="scripts/geometry/ColladaLoader.js"></script>	
+	<script type="text/javascript" src="scripts/carModel_old.js"></script>
+	<script type="text/javascript" src="scripts/model_old.js"></script>
 	<script type="text/javascript" src="scripts/matchbox.js"></script>
 	<script type="text/javascript" src="scripts/bezierpatch.js"></script>
 	<script type="text/javascript" src="scripts/utility2.js"></script>
+
 </head>
 <body>
 	<header id="header">
